log/build_2026-04-25_18-14-10/tensorrt_detect/stdout_stderr.log
-- Found ament_cmake: 2.5.6 (/opt/ros/jazzy/share/ament_cmake/cmake)
-- Found rclcpp: 28.1.18 (/opt/ros/jazzy/share/rclcpp/cmake)
-- Found rosidl_generator_c: 4.6.7 (/opt/ros/jazzy/share/rosidl_generator_c/cmake)
-- Found rosidl_generator_cpp: 4.6.7 (/opt/ros/jazzy/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 7.3.3 (/opt/ros/jazzy/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 8.4.3 (/opt/ros/jazzy/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found sensor_msgs: 5.3.7 (/opt/ros/jazzy/share/sensor_msgs/cmake)
-- Found cv_bridge: 4.1.0 (/opt/ros/jazzy/share/cv_bridge/cmake)
-- Found tensorrt_detect_msgs: 0.0.1 (/home/delphine/rm/tensorrt10_detect/install/tensorrt_detect_msgs/share/tensorrt_detect_msgs/cmake)
CMake Deprecation Warning at /home/delphine/open3d-devel-linux-x86_64-cxx11-abi-cuda-0.19.0/lib/cmake/Open3D/Open3DConfig.cmake:18 (cmake_policy):
  The OLD behavior for policy CMP0072 will be removed from a future version
  of CMake.

  The cmake-policies(7) manual explains that the OLD behaviors of all
  policies are deprecated and that a policy should be set to OLD only under
  specific short-term circumstances.  Projects should be ported to the NEW
  behavior and not rely on setting a policy to OLD.
Call Stack (most recent call first):
  CMakeLists.txt:28 (find_package)


-- Configuring done (0.5s)
-- Generating done (0.0s)
-- Build files have been written to: /home/delphine/rm/tensorrt10_detect/build/tensorrt_detect
[ 18%] Built target video_node
[ 18%] Built target display_node
[ 63%] Built target tensorrt_detect_core
[ 68%] Building CXX object CMakeFiles/map_node.dir/src/nodes/map_node.cpp.o
[ 77%] Built target standard
[ 81%] Building CXX object CMakeFiles/pose_node.dir/src/nodes/pose_node.cpp.o
[ 86%] Building CXX object CMakeFiles/detect_node.dir/src/nodes/detect_node.cpp.o
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/map_node.cpp: In member function ‘void MapNode::target_callback(tensorrt_detect_msgs::msg::WorldTargetArray_<std::allocator<void> >::SharedPtr)’:
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/map_node.cpp:111:24: error: ‘using std::__shared_ptr_access<tensorrt_detect_msgs::msg::RadarMap_<std::allocator<void> >, __gnu_cxx::_S_atomic, false, false>::element_type = struct tensorrt_detect_msgs::msg::RadarMap_<std::allocator<void> >’ {aka ‘struct tensorrt_detect_msgs::msg::RadarMap_<std::allocator<void> >’} has no member named ‘header’
  111 |             radar_msg->header = msg->header;
      |                        ^~~~~~
gmake[2]: *** [CMakeFiles/map_node.dir/build.make:76：CMakeFiles/map_node.dir/src/nodes/map_node.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:305：CMakeFiles/map_node.dir/all] 错误 2
gmake[1]: *** 正在等待未完成的任务....
[ 90%] Linking CXX executable pose_node
[ 90%] Built target pose_node
[ 95%] Linking CXX executable detect_node
[ 95%] Built target detect_node
gmake: *** [Makefile:146：all] 错误 2
